--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Traversy Media Quick Launcher</title>
+    <title>Roblox Ultra</title>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans"
       rel="stylesheet"
@@ -24,6 +24,7 @@
         min-height: 180px;
         padding: 0;
         width: 384px;
+        background-color: #0e1113;
       }
 
       h1 {
@@ -31,7 +32,7 @@
         font-size: 22px;
         font-weight: 400;
         margin: 0;
-        color: #2f5876;
+        color: #fcfcfc;
       }
 
       a:link,
@@ -52,6 +53,7 @@
 
       .modal-content {
         padding: 0 22px;
+        color: #fcfcfc;
       }
 
       .modal-icons {
@@ -94,6 +96,18 @@
         font-size: 40px;
         color: #2f5876;
       }
+
+      .modal-header{
+        background-color: #0e1113;
+      }
+
+      .modal-content{
+        background-color: #0e1113;
+      }
+
+      .modal-icons{
+        background-color: #0e1113;
+      }
     </style>
     <script src="popup.js"></script>
   </head>
@@ -101,39 +115,28 @@
   <body>
     <div class="modal-header">
       <h1 class="logo">
-        <img class="logo-icon" src="images/traversy-logo.png" />Traversy
-        Launcher
+        <img class="logo-icon" src="icon2.png" />Roblox Ultra
         <span class="version">(1.0.0)</span>
       </h1>
     </div>
     <div class="modal-content">
-      <p>Easily Access Traversy Media content</p>
+      <p>Made by Raishan Bernard</p>
     </div>
     <div class="modal-icons">
       <div class="flex-container">
         <div class="flex">
-          <a href="https://www.traversymedia.com" target="_blank">
-            <i class="fa fa-globe" style="color:darksalmon "></i>
+          <a href="https://www.youtube.com/channel/UC8ZrbiurHIih4HWQAn2EArQ?view_as=subscriber" target="_blank">
+            <i class="fa fa-youtube" style="color:rgb(255, 9, 9) "></i>
           </a>
         </div>
         <div class="flex">
-          <a href="https://www.youtube.com/traversymedia" target="_blank">
-            <i class="fa fa-youtube" style="color:darksalmon "></i>
+          <a href="https://twitter.com/RaishanBernard" target="_blank">
+            <i class="fa fa-twitter" style="color:rgb(17, 219, 255) "></i>
           </a>
         </div>
         <div class="flex">
-          <a href="https://www.twitter.com/traversymedia" target="_blank">
-            <i class="fa fa-twitter" style="color:darksalmon "></i>
-          </a>
-        </div>
-        <div class="flex">
-          <a href="https://www.facebook.com/traversymedia" target="_blank">
-            <i class="fa fa-facebook" style="color:darksalmon "></i>
-          </a>
-        </div>
-        <div class="flex">
-          <a href="https://www.github.com/bradtraversy" target="_blank">
-            <i class="fa fa-github" style="color:darksalmon "></i>
+          <a href="https://www.github.com/DrGloo" target="_blank">
+            <i class="fa fa-github" style="color:rgb(123, 226, 26) "></i>
           </a>
         </div>
       </div>
